cargar el icono de configuración dependiendo del tema

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -60,7 +60,7 @@
             <div id='loginScreenBigName'>
                 <b><span class="text" txt="noteAppName"></span></b>
             </div>
-            <img id="loginSettings" src="img/settings.png">
+            <img id="loginSettings">
             <div>
                 <h1><span class="text" txt="login"></span></h1>
                 <section id="usernameLoginSection">
