cosas no traducidas y pequeños arreglos

--- a/frontend/manageAccount.html
+++ b/frontend/manageAccount.html
@@ -63,6 +63,10 @@
                             <button class="greenButton text" id="toChangeColorTheme" txt="changeColorTheme">Change color theme</button>
                             <button class="greenButton text" id="toLocalCopyMenuButton" txt="localCopySettings">Configuración de copias locales</button>
                         </section>
+                        <section>
+                            <button class="greenButton text" txt="deleteConfigurationData">Borrar datos de configuración</button>
+                            <button class="greenButton text" txt="menu_eraseAll">Borrar todos los datos</button>
+                        </section>
                         <section id="modifyUserDataSection">
                             <p>
                                 <span class="text" txt="username">Nombre de usuario</span>:<br>
