more small fixes

--- a/frontend/manageAccount.html
+++ b/frontend/manageAccount.html
@@ -116,10 +116,10 @@
                 <div id="localCopyMenu" hidden>
                     <h1 class="text" txt="localCopySettings"></h1>
                         <section>
-                            <p class="text" txt="localCopyText1"></p>
-                            <p class="text" txt="localCopyText2"></p>
-                            <p class="text" txt="localCopyText3"></p>
-                            <p class="text" txt="localCopyText4"></p>
+                            <p class="text justified" txt="localCopyText1"></p>
+                            <p class="text justified" txt="localCopyText2"></p>
+                            <p class="text justified" txt="localCopyText3"></p>
+                            <p class="text justified" txt="localCopyText4"></p>
                         </section>
                         <section>
                             <p>
@@ -185,8 +185,8 @@
                     <h1 class="text" txt="deleteAccount"></h1>
                         <section>
                             <h2 class="text" txt="doYouWantToDeleteYourAccount"></h2>
-                            <p class="text" txt="deleteAccountText1"></p>
-                            <p class="text" txt="deleteAccountText2"></p>
+                            <p class="text justified" txt="deleteAccountText1"></p>
+                            <p class="text justified" txt="deleteAccountText2"></p>
                             <button class="greenButton" id="deleteAccountButton"></button>
                         </section>
                         <section>
