LA FORMA MAS CUTRE DE REDIMENSIONAR PERO NO SÉ DE QUÉ OTRA FORMA HACER

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -98,7 +98,7 @@
         </div>
 
         <div id='noteScreen' hidden>
-            <nav>
+            <nav id="nav">
                 <b><span class="text" txt="noteAppName"></span></b>
                 <button id='menuButton' class="text" txt="localMode"></button>
             </nav>
