--- a/frontend/manageAccount.html
+++ b/frontend/manageAccount.html
@@ -43,6 +43,7 @@
         <script defer src="js/manageAccount/logOutInAllDevices.js"></script>
         <script defer src="js/manageAccount/deleteAccoutMenu.js"></script>
         <script defer src="js/manageAccount/spellcheckMenu.js"></script>
+        <script defer src="js/manageAccount/navigationButtons.js"></script>
         <script defer src="js/manageAccount/manageAccount.js"></script>
     </head>
     <body>
