--- a/frontend/manageAccount.html
+++ b/frontend/manageAccount.html
@@ -7,7 +7,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
-        <!--Cargar los css dependiendo de si está en modo oscuro o no-->
+        <!--Cargar los css dependiendo de si está en modo oscuro o no -->
         <script>
             if(location.hash.includes('colortheme=dark')) loadDarkCss(true);
             else loadDarkCss(false);
@@ -43,6 +43,7 @@
         <script defer src="js/manageAccount/logOutInAllDevices.js"></script>
         <script defer src="js/manageAccount/deleteAccoutMenu.js"></script>
         <script defer src="js/manageAccount/spellcheckMenu.js"></script>
+        <script defer src="js/manageAccount/navigationButtons.js"></script>
         <script defer src="js/manageAccount/manageAccount.js"></script>
     </head>
     <body>
