--- a/frontend/manageAccount.html
+++ b/frontend/manageAccount.html
@@ -9,14 +9,9 @@
 
         <!--Cargar los css dependiendo de si está en modo oscuro o no -->
         <script>
-            if(location.hash.includes('colortheme=dark')) loadDarkCss(true);
-            else loadDarkCss(false);
-
-            function loadDarkCss(dark)
-            {
-                if(dark) document.write(`<link rel='stylesheet type='text/css' href='css/style-dark.css'>`);
-                else document.write(`<link rel='stylesheet type='text/css' href='css/style.css'>`);
-            }
+            if(location.hash.includes('colortheme=dark')) document.write(`<link rel='stylesheet type='text/css' href='css/style-dark.css'>`);
+            else if(location.hash.includes('colortheme=krad')) document.write(`<link rel='stylesheet type='text/css' href='css/style-krad.css'>`);
+            else document.write(`<link rel='stylesheet type='text/css' href='css/style.css'>`);
         </script>
 
 
@@ -111,6 +106,7 @@
                         <section>
                             <button class="greenButton text" id="changeColorTheme_light" txt="lightTheme"></button>
                             <button class="greenButton text" id="changeColorTheme_dark" txt="darkTheme"></button>
+                            <button class="greenButton text" id="changeColorTheme_krad" txt="kradTheme"></button>
                         </section>
                         <section>
                             <button class="greenButton text" id="changeColorTheme_cancel" txt="cancel"></button>
