--- a/frontend/createAccount.html
+++ b/frontend/createAccount.html
@@ -37,7 +37,11 @@
         <div id="loadingScreen">
             <section>
                 <b><span class='text' txt="noteAppName">Notas</span></b>
-                <h2 class="text" txt="loading">Loading this text...</h2>
+                <div id="loadingDotsContainer">
+                    <div class="loadingDot loadDot1"></div>
+                    <div class="loadingDot loadDot2"></div>
+                    <div class="loadingDot loadDot3"></div>
+                </div>
             </section>
         </div>
 
