--- a/frontend/index.html
+++ b/frontend/index.html
@@ -48,7 +48,7 @@
 
     </head>
     <body>
-        <div id=loadingScreen>
+        <div id="loadingScreen">
             <section>
                 <b><span class='text' txt="noteAppName">Notas</span></b>
                 <div id="loadingDotsContainer">
