/login en el backend, falta /loginCode

--- a/backend/emailPresets/loginEmail.html
+++ b/backend/emailPresets/loginEmail.html
@@ -94,7 +94,7 @@
             <b>Notas</b>
         </div>
         <h2 class=" ThingText">
-            El código para crear su cuenta:
+            El código para iniciar sesión
         </h2>
         <div class=" ThingCodeBox">
             <span class=" ThingCodeHere">
@@ -102,7 +102,7 @@
             </span>
         </div>
         <div class=" ThingFootText">
-            Este código fue enviado desde <a href="http://idko.infinityfreeapp.com/notas">http://idko.infinityfreeapp.com/notas</a> para confirmar la creación de una cuenta de usuario. Si usted no solicitó este correo electrónico no es necesario que haga absolutamente nada.
+            Este código fue enviado desde <a href="http://idko.infinityfreeapp.com/notas">http://idko.infinityfreeapp.com/notas</a> para iniciar sesión. Si usted no solicitó este correo electrónico no es necesario que haga absolutamente nada.
         </div>
         </div>
     </body>
