se puede entrar en manageAccount

--- a/frontend/manageAccount.html
+++ b/frontend/manageAccount.html
@@ -39,7 +39,7 @@
         <script defer src="js/manageAccount/deleteAccoutMenu.js"></script>
         <script defer src="js/manageAccount/spellcheckMenu.js"></script>
         <script defer src="js/manageAccount/navigationButtons.js"></script>
-        <script defer src="js/manageAccount/manageAccount.js"></script>
+        <script defer src="js/manageAccount/main.js"></script>
     </head>
     <body>
         <div id=loadingScreen>
