faltaba una comilla al cargar los css, nunca hizo nada, pero igual está arreglado

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,9 +12,9 @@
             let colorTheme = localStorage.getItem('_theme');
             switch(colorTheme)
             {
-                case 'dark': document.write(`<link rel='stylesheet type='text/css' href='css/style-dark.css'>`); break;
-                case 'krad': document.write(`<link rel='stylesheet type='text/css' href='css/style-krad.css'>`); break;
-                default: document.write(`<link rel='stylesheet type='text/css' href='css/style.css'>`); break;
+                case 'dark': document.write(`<link rel='stylesheet' type='text/css' href='css/style-dark.css'>`); break;
+                case 'krad': document.write(`<link rel='stylesheet' type='text/css' href='css/style-krad.css'>`); break;
+                default: document.write(`<link rel='stylesheet' type='text/css' href='css/style.css'>`); break;
             }
 
         </script>
