--- a/frontend/manageAccount.html
+++ b/frontend/manageAccount.html
@@ -9,9 +9,9 @@
 
         <!--Cargar los css dependiendo de si está en modo oscuro o no -->
         <script>
-            if(location.hash.includes('colortheme=dark')) document.write(`<link rel='stylesheet type='text/css' href='css/style-dark.css'>`);
-            else if(location.hash.includes('colortheme=krad')) document.write(`<link rel='stylesheet type='text/css' href='css/style-krad.css'>`);
-            else document.write(`<link rel='stylesheet type='text/css' href='css/style.css'>`);
+            if(location.hash.includes('colortheme=dark')) document.write(`<link rel='stylesheet' type='text/css' href='css/style-dark.css'>`);
+            else if(location.hash.includes('colortheme=krad')) document.write(`<link rel='stylesheet' type='text/css' href='css/style-krad.css'>`);
+            else document.write(`<link rel='stylesheet' type='text/css' href='css/style.css'>`);
         </script>
 
 
